:sparkles: feat: Implementação de novos valores para o objeto Movie
